# sizr-format

./: .gitignore  .gitmodules  README.md
docs/src/: .gitignore  jsconfig.json  package.json  playground.css  playground.html  playground.js  vite.config.ts  webdriver.wasm
misc/: main.go
misc/docs/: examples.md  operators.md
misc/samples/: log.py  test1.py  tiny.py
py_sizr_proto/: cst_util.py  engine.py  parser.py  sizr.py  sizr_test.py
sizr/: .gitignore  TODO.md  bytecode.md  go.mod  parser.go  prototype.py  riff.md  sizr.py
sizr-core/: Cargo.toml  build.rs
sizr-core/src/backends/python/: mod.rs
sizr-format/: Cargo.toml  README.md  build.rs  example.sizf
sizr-format-zig/: .gitignore  README.md  README.sh  TREESNIPPER.md  TreeStitcher.md  build.zig  code1.breakpoints  code2.breakpoints  code3  comparing.llvm.ir  fixed.llvm.ir  out.llvm.ir  parser.zig  part.llvm.ir  tsquery.zig
sizr-format-zig/src/: code.zig  code2.zig  code3.zig  cpp.zig  main.zig  parser.zig  python.zig  test_util.zig  tree_sitter.zig  util.zig
sizr-format/src/: eval.rs  example.sizf  format.pest  grammar.md  main.rs  parser.rs
sizr-format/tests/data/: simple.sizf  simple_with_comment.sizf
sizr-format/tests/data/python/: empty_else.py  simple.py  simple.sizf
sizr/docs/: cpp.md  examples.md  operators.md  riff.md  rpc-format.md
sizr/py-prototype/: __init__.py  (+5 more)
tree-sitter/: build.zig  tree_sitter.zig
tree-stitcher/: .gitignore  README.md  bindings.h  build.zig  debug-dlopen.c  debug-dlopen.sh  test.sh  tree-sitter-chibi-ffi.scm
website/: index.html  playground.html
(+47 files in other folders)
