[package]
name = "sizr-core"
version = "0.1.0"
authors = ["Michael Belousov <michael.belousov98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
pyo3 = "0.12.3"
lazy_static = "1.4.0"
tree-sitter = "0.17.0"

[build-dependencies]
cc="*"
