[package]
name = "sizr-format"
version = "0.1.0"
authors = ["Michael Belousov <michael.belousov98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
num-traits = "0.2"
num-derive = "0.2"
tree-sitter = "0.19"

[build-dependencies]
cc="*"
